[package]
name = "reclone"
version = "0.1.2"
edition = "2021"

authors = [
  "Samir Bioud <samir@kronsy.dev>"
]

license = "MIT"


description = "Simple utility library for creating a new scope with a set of cloned variables"



homepage = "https://github.com/KronsyC/reclone"
documentation = "https://github.com/KronsyC/reclone"

keywords = [
  "utility",
  "no-std",
  "clone",

]

categories = [
  "no-std",
  "no-std::no-alloc"
]

[dependencies]
